src/objects/BGCK__Page_Question__c.object
<CustomObject>
    <fields>
        <fullName>Application_Type__c</fullName>
        <label>Application Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>BGCK__BG_Checklist_Name__c</fullName>
        <formula>BGCK__Page__r.BGCK__Checklist_Version__r.BGCK__BG_Checklist_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Checklist_Version_Status__c</fullName>
        <formula>text(BGCK__Page__r.BGCK__Checklist_Version__r.BGCK__Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Checklist Version Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Criteria__c</fullName>
        <label>Criteria</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BGCK__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BGCK__Order__c</fullName>
        <defaultValue>1</defaultValue>
        <description>This can not have decimal point,  must be a integer</description>
        <label>Order</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BGCK__Page__c</fullName>
        <label>Page</label>
        <referenceTo>BGCK__Page__c</referenceTo>
        <relationshipLabel>Page Questions</relationshipLabel>
        <relationshipName>Page_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BGCK__Parent_Page_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Page Question</label>
        <referenceTo>BGCK__Page_Question__c</referenceTo>
        <relationshipLabel>Page Questions</relationshipLabel>
        <relationshipName>Page_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Question_Number__c</fullName>
        <formula>BGCK__Question__r.BGCK__Question_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BGCK__Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>BGCK__Question__c</referenceTo>
        <relationshipLabel>Page Questions</relationshipLabel>
        <relationshipName>Page_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__SubQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SubQuestion</label>
        <referenceTo>BGCK__Question__c</referenceTo>
        <relationshipLabel>Page Questions (SubQuestion)</relationshipLabel>
        <relationshipName>SubQuestion</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BGCK__Track_No__c</fullName>
        <externalId>true</externalId>
        <label>Tracking Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Checklist_for__c</fullName>
        <label>Application Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Method</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Checklist_type__c</fullName>
        <label>Checklist type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Credential__c</fullName>
        <label>Credential</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Permit_Type_or_Credential_Type__c</fullName>
        <label>Program Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Audit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_for__c</fullName>
        <label>Review for</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>pagequestion_Review_for</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_Crendential__c</fullName>
        <label>License Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Credential_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Violation__c</fullName>
        <label>Violation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WADOL_Mulesoft_Ext_Id__c</fullName>
        <externalId>true</externalId>
        <label>Mulesoft Ext Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Page Question</label>
    <listViews>
        <fullName>All_Active</fullName>
        <columns>BGCK__Order__c</columns>
        <columns>NAME</columns>
        <columns>BGCK__BG_Checklist_Name__c</columns>
        <columns>Type__c</columns>
        <columns>BGCK__Checklist_Version_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Active</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>BGCK__All_Draft</fullName>
        <columns>BGCK__Order__c</columns>
        <columns>NAME</columns>
        <columns>BGCK__IsRequired__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>BGCK__Checklist_Version_Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>All Draft</label>
    </listViews>
    <listViews>
        <fullName>sadhana_check</fullName>
        <booleanFilter>1 AND 2 AND 3 AND 4</booleanFilter>
        <columns>NAME</columns>
        <columns>BGCK__BG_Checklist_Name__c</columns>
        <columns>BGCK__Checklist_Version_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>BGCK__Checklist_Version_Status__c</field>
            <operation>equals</operation>
            <value>active</value>
        </filters>
        <filters>
            <field>BGCK__BG_Checklist_Name__c</field>
            <operation>equals</operation>
            <value>Architect by Reciprocity - licensed more 9 years licensure</value>
        </filters>
        <filters>
            <field>Type_Crendential__c</field>
            <operation>equals</operation>
            <value>Architect</value>
        </filters>
        <label>sadhana check</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Page Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>